--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,8 @@ body{background-color: #0E1014;}
 header img{ 
     display: block;
     margin: 75px 0 0 160px;
+    width: 340px;
+    height: 230px
 }
 
 h1, p, a {color: #FFFFFF;}
